--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,11 @@
         "cstring": "cpp",
         "fstream": "cpp",
         "cinttypes": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "ctime": "cpp",
+        "ratio": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp",
+        "semaphore": "cpp"
     }
 }
